Fixes some spacing on things to do sub pages

--- a/wp-content/themes/cmp/assets/styles/pages/_things-to-do-subcategory.scss
+++ b/wp-content/themes/cmp/assets/styles/pages/_things-to-do-subcategory.scss
@@ -39,6 +39,7 @@
     display: flex;
     flex-wrap: wrap;
     top: 0;
+    margin-top: $base-spacing;
 
     .activity {
       flex-basis: 49%;
